--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,16 @@ name: 'Scheduled Workflow'
 run-name: 'Testing Scheduled Workflow'
 on:
   schedule:
-    - cron: '*/6 * * * *'
+  - cron: '*/5 * * * *'
 
 jobs:
-  test_schedule:
+  job1:
+    name: Debug
     runs-on: ubuntu-latest
+
     steps:
-      - name: Every time
-        run: echo "This step will always run"
+    - name: Git checkout
+      uses: actions/checkout@v2
+      with: { ref: debug }
+    - name: List files
+      run: ls
